--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: 精东影业-精东影视app传媒制作公司
-site_author: 精东影业
-site_description: 精东影业是一家专注于影视制作与发行的精东影视传媒制作公司，精东影视app致力于为用户提供优质的影视内容。其官方网站汇集了丰富的电影、电视剧、综艺等资源，支持在线观看与高清下载。网站界面简洁，分类清晰，涵盖最新热播剧集、经典影片推荐及独家原创内容，满足不同用户的观影需求。同时提供会员服务，享受无广告、蓝光画质等特权，打造沉浸式观影体验。
+site_name: 夜月直播APP免费最新版下载
+site_author: 夜月直播视频
+site_description: 夜月直播是面向Z世代用户的泛娱乐直播视频社交平台，整合真人互动、才艺展示与数字消费场景，形成多元化的线上娱乐生态!
 theme:
   name: readthedocs
 nav:
